# mms-data-pipeline

./: README.md  environment.yml  pyproject.toml  pyrightconfig.json
scripts/: gen_pyright_config.sh
src/pipeline/steps/: step1.py
src/pipeline/utils/: __init__.py  data.py  snirf.py
tests/: test_snirf.py  test_step1.py
tests/fixtures/: example_data.csv
typings/snirf/: __init__.pyi  __version__.pyi  pysnirf2.pyi
